css: Fix missing padding on string/number fields

--- a/assets/nodestyle.css
+++ b/assets/nodestyle.css
@@ -112,7 +112,6 @@
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 0px;
     border: 0px;
 }
 
@@ -122,7 +121,6 @@
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 0px;
     border: 0px;
 }
 
